# Drawing-editor

./: .gitignore  README.md  pyproject.toml
docs/: flowers
src/: main.py
